[gd_scene load_steps=7 format=3 uid="uid://cf1a4xmw731qo"]

[ext_resource type="Texture2D" uid="uid://bf3xkytqjsi1l" path="res://assets/art/Art by Tiziano Zhou - Placeholder DELETE LATER DO NOT USE IN RELEASE.jpg" id="1_76bhb"]
[ext_resource type="Script" path="res://scenes/main/newLeaderScreen.gd" id="1_jxsny"]
[ext_resource type="PackedScene" uid="uid://bj5yfd4huc0bl" path="res://scenes/characters/catPortrait.tscn" id="2_3mhf7"]
[ext_resource type="Texture2D" uid="uid://babo7xgvs01ah" path="res://assets/ui/starclanGuiBox.png" id="3_ej1vq"]
[ext_resource type="Theme" uid="uid://ro4pnv2rc2x7" path="res://assets/ui/themes and styleboxes/defaultTheme.tres" id="4_qfnf1"]
[ext_resource type="Texture2D" uid="uid://ecxgcskpbghw" path="res://assets/images/maleSex.png" id="6_uep0k"]

[node name="Node2D" type="Node2D"]

[node name="img_backgroundImage" type="TextureRect" parent="."]
offset_left = 1.0
offset_top = -5.0
offset_right = 1921.0
offset_bottom = 1116.0
texture = ExtResource("1_76bhb")

[node name="starclanMenu" type="NinePatchRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 547.0
offset_top = 1.0
offset_right = 1480.0
offset_bottom = 1057.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_ej1vq")
region_rect = Rect2(2.5, -1.64463, 503, 409.517)
patch_margin_left = 27
patch_margin_top = 87
patch_margin_right = 37
patch_margin_bottom = 40
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="starclanMenu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.406217
anchor_top = 0.446105
anchor_right = 0.599143
anchor_bottom = 0.706975
offset_left = -95.0
offset_top = -185.5
offset_right = 95.0
offset_bottom = 185.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1
metadata/_edit_use_anchors_ = true

[node name="changeSex" type="Button" parent="starclanMenu/VBoxContainer2"]
layout_mode = 2
theme = ExtResource("4_qfnf1")
text = "male"

[node name="changeColour" type="Button" parent="starclanMenu/VBoxContainer2"]
layout_mode = 2
theme = ExtResource("4_qfnf1")
text = "grey"

[node name="changeTabby" type="Button" parent="starclanMenu/VBoxContainer2"]
layout_mode = 2
theme = ExtResource("4_qfnf1")
text = "tabby"

[node name="changeWhiteness" type="Button" parent="starclanMenu/VBoxContainer2"]
layout_mode = 2
theme = ExtResource("4_qfnf1")
text = "not white"

[node name="changeFurLength" type="Button" parent="starclanMenu/VBoxContainer2"]
layout_mode = 2
theme = ExtResource("4_qfnf1")
text = "shorthaired"

[node name="changeEyeColourSlider" type="HSlider" parent="starclanMenu/VBoxContainer2"]
layout_mode = 2
max_value = 62.0

[node name="finishedButton" type="Button" parent="starclanMenu"]
layout_mode = 2
offset_left = 484.0
offset_top = 939.0
offset_right = 895.0
offset_bottom = 1025.0
theme = ExtResource("4_qfnf1")
text = "I'm ready to play. Save this leader!"

[node name="randomiseButton" type="Button" parent="starclanMenu"]
layout_mode = 2
offset_left = 38.0
offset_top = 937.0
offset_right = 220.0
offset_bottom = 1023.0
theme = ExtResource("4_qfnf1")
text = "Randomise"

[node name="randomisePrefixButton" type="Button" parent="starclanMenu"]
layout_mode = 2
offset_left = 649.0
offset_top = 128.0
offset_right = 895.0
offset_bottom = 214.0
theme = ExtResource("4_qfnf1")
text = "Randomise prefix"

[node name="Label" type="Label" parent="starclanMenu"]
layout_mode = 0
offset_left = 519.0
offset_top = 858.0
offset_right = 891.0
offset_bottom = 955.0
text = "note: this button will reset genetically impossible traits (like male torties)!"
autowrap_mode = 2
text_overrun_behavior = 2

[node name="changeSexButton_ImplementLater" type="TextureButton" parent="starclanMenu"]
visible = false
layout_mode = 0
offset_left = 165.0
offset_top = 303.0
offset_right = 198.0
offset_bottom = 339.0
stretch_mode = 0

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_jxsny")
metadata/_edit_use_anchors_ = true

[node name="newLeaderExplanation_Label" type="Label" parent="Control"]
visible = false
layout_mode = 0
offset_left = -345.0
offset_top = 31.0
offset_right = 790.0
offset_bottom = 72.0
text = "Design your starting leader"
horizontal_alignment = 1

[node name="DEBUGDELETELATER_GENETICCODE" type="Label" parent="Control"]
visible = false
layout_mode = 0
offset_left = 41.0
offset_top = 167.0
offset_right = 157.0
offset_bottom = 208.0
text = "0000000000"
metadata/_edit_use_anchors_ = true

[node name="newLeader_AllegianceDescription_Label" type="Label" parent="Control"]
layout_mode = 0
offset_left = 837.0
offset_top = 224.0
offset_right = 1094.0
offset_bottom = 265.0
theme_override_colors/font_color = Color(0.1465, 0.0579143, 0.00260801, 1)
text = "a grey tabby tom"
horizontal_alignment = 1

[node name="newLeaderPrefix_textEdit" type="LineEdit" parent="Control"]
layout_mode = 0
offset_left = 835.0
offset_top = 117.0
offset_right = 1090.0
offset_bottom = 201.0
theme_override_font_sizes/font_size = 30

[node name="newLeaderSuffix_Label" type="Label" parent="Control"]
layout_mode = 0
offset_left = 1100.0
offset_top = 122.0
offset_right = 1197.0
offset_bottom = 198.0
theme_override_colors/font_color = Color(0.158196, 0.0626182, 0.0129058, 1)
theme_override_font_sizes/font_size = 30
text = "star"
horizontal_alignment = 1
vertical_alignment = 1

[node name="userInsertNewLeaderPrefix_TextEdit" type="LineEdit" parent="Control"]
visible = false
layout_mode = 0
offset_left = 213.0
offset_top = 325.0
offset_right = 361.0
offset_bottom = 374.0
text = "Aster"
metadata/_edit_use_anchors_ = true

[node name="newLeader_pickSex_Dropdown" type="OptionButton" parent="Control"]
visible = false
layout_mode = 0
offset_left = 212.0
offset_top = 387.0
offset_right = 368.0
offset_bottom = 436.0
selected = 0
item_count = 2
popup/item_0/text = "Male"
popup/item_0/id = 0
popup/item_1/text = "Female"
popup/item_1/id = 1
metadata/_edit_use_anchors_ = true

[node name="newLeader_pickIfTabby_Dropdown" type="OptionButton" parent="Control"]
visible = false
layout_mode = 0
offset_left = 215.0
offset_top = 499.0
offset_right = 371.0
offset_bottom = 548.0
selected = 1
item_count = 2
popup/item_0/text = "Solid"
popup/item_0/id = 0
popup/item_0/disabled = true
popup/item_1/text = "Tabby"
popup/item_1/id = 1
metadata/_edit_use_anchors_ = true

[node name="newLeader_pickColour_Dropdown" type="OptionButton" parent="Control"]
visible = false
layout_mode = 0
offset_left = 217.0
offset_top = 440.0
offset_right = 422.0
offset_bottom = 489.0
selected = 1
item_count = 12
popup/item_0/text = "Black"
popup/item_0/id = 0
popup/item_1/text = "Grey"
popup/item_1/id = 1
popup/item_2/text = "Chocolate"
popup/item_2/id = 2
popup/item_3/text = "Cinnamon"
popup/item_3/id = 3
popup/item_4/text = "Lilac"
popup/item_4/id = 4
popup/item_5/text = "Fawn"
popup/item_5/id = 5
popup/item_6/text = "Ginger"
popup/item_6/id = 6
popup/item_7/text = "Cream"
popup/item_7/id = 7
popup/item_8/text = "Black-red tortie"
popup/item_8/id = 8
popup/item_8/disabled = true
popup/item_9/text = "Brown-red tortie"
popup/item_9/id = 9
popup/item_9/disabled = true
popup/item_10/text = "Grey-cream tortie"
popup/item_10/id = 10
popup/item_10/disabled = true
popup/item_11/text = "Grey-lilac tortie"
popup/item_11/id = 11
popup/item_11/disabled = true
metadata/_edit_use_anchors_ = true

[node name="explain_insertNewLeaderPrefix_Label" type="Label" parent="Control"]
visible = false
layout_mode = 0
offset_left = 78.0
offset_top = 336.0
offset_right = 198.0
offset_bottom = 377.0
text = "Prefix?"
autowrap_mode = 3
metadata/_edit_use_anchors_ = true

[node name="explain_changeNewLeaderSex_Label" type="Label" parent="Control"]
visible = false
layout_mode = 0
offset_left = 78.0
offset_top = 384.0
offset_right = 198.0
offset_bottom = 425.0
text = "Sex?"
autowrap_mode = 3
metadata/_edit_use_anchors_ = true

[node name="explain_changeNewLeaderColour_Label" type="Label" parent="Control"]
visible = false
layout_mode = 0
offset_left = 73.0
offset_top = 443.0
offset_right = 193.0
offset_bottom = 484.0
text = "Coat colour?"
autowrap_mode = 3
metadata/_edit_use_anchors_ = true

[node name="explain_isLeaderTabby_Label" type="Label" parent="Control"]
visible = false
layout_mode = 0
offset_left = 73.0
offset_top = 505.0
offset_right = 193.0
offset_bottom = 546.0
text = "Tabby?"
autowrap_mode = 3
metadata/_edit_use_anchors_ = true

[node name="explain_chooseLeaderWhiteness_Label" type="Label" parent="Control"]
visible = false
layout_mode = 0
offset_left = 74.0
offset_top = 558.0
offset_right = 194.0
offset_bottom = 599.0
text = "Whiteness?"
autowrap_mode = 3
metadata/_edit_use_anchors_ = true

[node name="describeNewLeader_Label" type="Label" parent="Control"]
layout_mode = 0
offset_left = -280.0
offset_top = 15.0
offset_right = -240.0
offset_bottom = 56.0

[node name="confirmPrefix_Button" type="Button" parent="Control"]
visible = false
layout_mode = 0
offset_left = 388.0
offset_top = 330.0
offset_right = 480.0
offset_bottom = 379.0
text = "Confirm"
metadata/_edit_use_anchors_ = true

[node name="confirmSex_Button" type="Button" parent="Control"]
visible = false
layout_mode = 0
offset_left = 388.0
offset_top = 388.0
offset_right = 480.0
offset_bottom = 437.0
text = "Confirm"
metadata/_edit_use_anchors_ = true

[node name="confirmColour_Button" type="Button" parent="Control"]
visible = false
layout_mode = 0
offset_left = 389.0
offset_top = 443.0
offset_right = 481.0
offset_bottom = 492.0
text = "Confirm"
metadata/_edit_use_anchors_ = true

[node name="confirmIfTabby_Button" type="Button" parent="Control"]
visible = false
layout_mode = 0
offset_left = 389.0
offset_top = 502.0
offset_right = 481.0
offset_bottom = 551.0
text = "Confirm"
metadata/_edit_use_anchors_ = true

[node name="confirmWhiteness_Button" type="Button" parent="Control"]
visible = false
layout_mode = 0
offset_left = 390.0
offset_top = 559.0
offset_right = 482.0
offset_bottom = 608.0
text = "Confirm"
metadata/_edit_use_anchors_ = true

[node name="leaderIsNowReady_Button" type="Button" parent="Control"]
visible = false
layout_mode = 0
offset_left = 71.0
offset_top = 646.0
offset_right = 412.0
offset_bottom = 695.0
text = "I'm ready to play. Save this leader!"
metadata/_edit_use_anchors_ = true

[node name="whitenessSlider_Slider" type="HSlider" parent="Control"]
visible = false
layout_mode = 0
offset_left = 220.0
offset_top = 564.0
offset_right = 363.0
offset_bottom = 580.0
max_value = 9.0
metadata/_edit_use_anchors_ = true

[node name="catPortrait_LeaderInstance" parent="Control" instance=ExtResource("2_3mhf7")]
offset_left = 727.0
offset_top = 188.0
offset_right = 727.0
offset_bottom = 188.0
scale = Vector2(2.04, 2.04)

[node name="sexIcon" type="TextureRect" parent="."]
offset_left = 793.0
offset_top = 396.0
offset_right = 857.0
offset_bottom = 460.0
scale = Vector2(0.559995, 0.559995)
texture = ExtResource("6_uep0k")

[connection signal="pressed" from="starclanMenu/VBoxContainer2/changeSex" to="Control" method="_on_changeSexButton_pressed"]
[connection signal="pressed" from="starclanMenu/VBoxContainer2/changeColour" to="Control" method="_on_coatColourButton_pressed"]
[connection signal="pressed" from="starclanMenu/VBoxContainer2/changeTabby" to="Control" method="_on_changeTabbyBtn_pressed"]
[connection signal="pressed" from="starclanMenu/VBoxContainer2/changeWhiteness" to="Control" method="_on_changeWhiteness_pressed"]
[connection signal="pressed" from="starclanMenu/VBoxContainer2/changeFurLength" to="Control" method="_on_changeFurLengthBtn_pressed"]
[connection signal="value_changed" from="starclanMenu/VBoxContainer2/changeEyeColourSlider" to="Control" method="_on_changeEyeColour_slider_value_changed"]
[connection signal="pressed" from="starclanMenu/finishedButton" to="Control" method="_on_finishedCreatingButton_pressed"]
[connection signal="pressed" from="starclanMenu/randomiseButton" to="Control" method="_on_randomise_button_pressed"]
[connection signal="pressed" from="starclanMenu/randomisePrefixButton" to="Control" method="_on_randomisePrefixButton_pressed"]
[connection signal="pressed" from="starclanMenu/changeSexButton_ImplementLater" to="Control" method="_on_changeSex_button_pressed"]
[connection signal="text_submitted" from="Control/newLeaderPrefix_textEdit" to="Control" method="_on_prefixInput_text_submitted"]
[connection signal="pressed" from="Control/confirmPrefix_Button" to="Control" method="_newLeader_on_setNewPrefix_button_pressed"]
[connection signal="pressed" from="Control/confirmSex_Button" to="Control" method="_on_confirmSex_button_pressed"]
[connection signal="pressed" from="Control/confirmColour_Button" to="Control" method="_on_confirmColour_button_pressed"]
[connection signal="pressed" from="Control/confirmIfTabby_Button" to="Control" method="_on_confirm_ifTabby_button_pressed"]
[connection signal="pressed" from="Control/confirmWhiteness_Button" to="Control" method="_on_confirm_whiteness_button_pressed"]
[connection signal="pressed" from="Control/leaderIsNowReady_Button" to="Control" method="_on_leaderIsNowReady_button_pressed"]
